refactor: CustomServletContext가 서블릿/필터 등록을 직접 관리하도록 개선
기존에는 CustomWebServer 생성자 안에서 익명 클래스로 addServlet/addFilter를
오버라이드하여 서블릿을 가로채는 방식이었음.
이제 CustomServletContext 자체가 표준 ServletRegistration API를 완전히 구현하므로
별도의 오버라이드 없이 동작함.

- CustomServletRegistration: ServletRegistration.Dynamic 구현
  - Servlet 인스턴스와 URL 매핑, 초기화 파라미터 저장
- CustomFilterRegistration: FilterRegistration.Dynamic 구현
  - Filter 인스턴스와 URL 패턴, DispatcherType 매핑 저장
- CustomServletContext:
  - addServlet/addFilter를 실제 저장 로직으로 구현 (기존 null 반환 stub 제거)
  - addServlet(String, String), addServlet(String, Class) 리플렉션 기반 인스턴스화
  - createServlet/createFilter 구현
  - getServletRegistrations, getFilterRegistrations 실제 Map 반환
  - 컨테이너 내부 접근용 getCustomServletRegistrations, getCustomFilterRegistrations 추가
- CustomWebServer:
  - 익명 클래스 제거 → new CustomServletContext() 직접 생성
  - CGLIB Proxy 의존성 완전 제거
  - onStartup 이후 getCustomServletRegistrations()로 DispatcherServlet 조회

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>